apm config